Improvements to delete modals, fixes - Add bookmark info to recording delete modal - Add portal option to RemoveWidget to escape overflow areas - Make delete tooltip clickable - Add optional scroll check to OutsideClick - Fix bookmark recording session column - Update public flag on collection list - Simplify collections api response with flags

--- a/frontend/src/base.scss
+++ b/frontend/src/base.scss
@@ -32,10 +32,6 @@ a {
   flex-direction: column;
 }
 
-#portal {
-
-}
-
 .wr-overlay {
   position: absolute;
   z-index: 3000;
